Interpret `DW_RLE_start_length`

Fixes [Bug #17823]